Update 'x5ss3i2q1-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-627a26eb75.nkab.p3.openshiftapps.com/rhtap/rhtap-qe:52baf2b43a86cf35f0d683012b15389ef3b166fe@sha256:773bb9c91e4d10b413b8cce895d695e8d81780c866773bccbc87d9523b545606

--- a/components/x5ss3i2q1-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/x5ss3i2q1-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x5ss3i2q1-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-627a26eb75.nkab.p3.openshiftapps.com/rhtap/rhtap-qe:52baf2b43a86cf35f0d683012b15389ef3b166fe@sha256:773bb9c91e4d10b413b8cce895d695e8d81780c866773bccbc87d9523b545606
+          name: container-image
